# rust-sentence-transformers

./: Cargo.toml
examples/: bert-base-nli-stsb-mean-tokens.rs
src/model/: bert.rs  pooling.rs  sentence_tranformer.rs
