[package]
name = "rust-sentence-transformers"
version = "0.1.0"
authors = ["mladvladimir <mlad.vladimir@gmail.com>"]
repository = "https://github.com/mladvladimir/rust-sentence-transformers"
edition = "2021"

[lib]
name = "rust_sentence_transformers"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
rust-bert = "0.21.0"
rust_tokenizers = "8.1.0"
tch = "0.13.0"
serde_json = "1.0.96"
serde = {version = "1.0.164", features = ["derive"]}
failure = "0.1.8"
log = "0.4.19"
dirs = "5.0.1"

